trying to fix the text color when autofilled on iphone chrome

--- a/src/components/ContactPageComponents/contact.css
+++ b/src/components/ContactPageComponents/contact.css
@@ -2,6 +2,20 @@
   @apply block py-2.5 px-0 w-full text-base text-white bg-transparent border-0 border-b-2 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-white;
 }
 
+input:-webkit-autofill {
+  -webkit-text-fill-color: #ffffff !important;
+  color: white !important;
+}
+
+input:-webkit-autofill:focus {
+  -webkit-text-fill-color: #ffffff !important;
+  color: white !important;
+}
+
+input::placeholder {
+  -webkit-text-fill-color: #ffffff !important;
+  color: white !important;
+}
 
 input {
   -webkit-background-clip: text !important;
